<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homeicon"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_myinfo"
            android:icon="@drawable/infoicon"
            android:title="@string/nav_myinfo" />


        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settingsicon"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_inquire"
                android:title="@string/action_inquire" />
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>